--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,48 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.vunhiem.lockscreenios">
 
+    <uses-feature
+            android:name="android.hardware.camera"
+            android:required="true"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE"/>
-    <uses-permission android:name="android.permission.CAMERA"> </uses-permission>
+    <uses-permission android:name="android.permission.CAMERA">
+    </uses-permission>
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
+
+    <uses-feature android:name="android.hardware.camera.flash"/>
 
     <application
-            android:showOnLockScreen="true"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_icon_app"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/ic_icon_app"
+            android:showOnLockScreen="true"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".screens.wallpaper.SetWallpaper"
+        >
+        </activity>
+        <activity android:name=".screens.wallpaper.Wallpaper">
+        </activity>
+        <activity android:name=".screens.password.ChangePassActivity">
+        </activity>
+        <activity android:name=".screens.password.PasswordAuthentic">
+        </activity>
+        <activity android:name=".screens.password.NewPassword">
+        </activity>
+        <activity android:name=".screens.password.PasswordActivity">
+        </activity>
+
         <service
                 android:name=".service.MyService"
                 android:enabled="true"
                 android:exported="true">
         </service>
-
 
         <activity android:name=".screens.main.MainActivity">
         </activity>
