--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.vunhiem.lockscreenios">
 
     <uses-feature
             android:name="android.hardware.camera"
             android:required="true"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-    <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE"/>
-    <uses-permission android:name="android.permission.CAMERA">
-    </uses-permission>
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
     <uses-feature android:name="android.hardware.camera.flash"/>
@@ -25,8 +24,11 @@
             android:showOnLockScreen="true"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".screens.wallpaper.SetWallpaper"
-        >
+        <activity android:name=".screens.privacy.PrivacyActivity">
+        </activity>
+        <activity android:name=".notification.SetNotification">
+        </activity>
+        <activity android:name=".screens.wallpaper.SetWallpaper">
         </activity>
         <activity android:name=".screens.wallpaper.Wallpaper">
         </activity>
@@ -43,6 +45,16 @@
                 android:name=".service.MyService"
                 android:enabled="true"
                 android:exported="true">
+        </service>
+        <service
+                android:name=".service.NotificationService"
+                android:enabled="true"
+                android:exported="true"
+                android:label="@string/app_name"
+                android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService"/>
+            </intent-filter>
         </service>
 
         <activity android:name=".screens.main.MainActivity">
