--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
             android:name="android.hardware.camera"
             android:required="true"/>
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
@@ -24,6 +26,8 @@
             android:showOnLockScreen="true"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".screens.wallpaper.CropImageActivity">
+        </activity>
         <activity android:name=".screens.privacy.PrivacyActivity">
         </activity>
         <activity android:name=".notification.SetNotification">
@@ -51,7 +55,8 @@
                 android:enabled="true"
                 android:exported="true"
                 android:label="@string/app_name"
-                android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+                android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
+                android:stopWithTask="false">
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService"/>
             </intent-filter>
@@ -66,6 +71,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+              android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
     </application>
 
 </manifest>
